ZCS-12417:Add Mail Recall feature option in Admin Console
-Add mail recall check box and mail recall interval in COS, Domain, Account level.
-Mail recall Interval will be disable when Mail recall not checked.
-Dropdown from "1 minute" to "30 minutes".

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -1005,6 +1005,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Adre\u00e7a del missatge de confirmaci\u00
 LBL_zimbraPrefReadReceiptsToAddress = Adre\u00e7a del missatge de confirmaci\u00f3 de lectura del missatge rebut: 
 LBL_zimbraPrefMailSendReadReceipts = Envia confirmacions de lectura:
 LBL_zimbraFeatureReadReceiptsEnabled = Habilita confirmacions de lectura
+LBL_zimbraFeatureEnableMailRecall = recordatori de correu
+LBL_zimbraFeatureMailRecallInterval = interval de recuperaci\u00f3 del correu
 LBL_zimbraPrefMandatorySpellCheckEnabled = Habilita el corrector ortogr\u00e0fic obligatori
 SEND_READ_RECEIPT_PROMPT = Indicaci\u00f3
 SEND_READ_RECEIPT_NEVER = Mai
@@ -1015,6 +1017,8 @@ MSG_zimbraPrefMailPollingInterval = Interval de sondeig (temps despr\u00e9s del 
 LBL_asNewMailArrives = Quan arribi correu nou
 LBL_manual = Manualment
 LBL_minute = minuts
+LBL_recallminute = {0} minuts
+LBL_recallminutes = {0} minuts
 LBL_zimbraPrefMailPollingInterval = Interval de sondeig (temps despr\u00e9s del qual cal comprovar si hi ha correu nou):
 MSG_zimbraMailMinPollingInterval = Interval de sondeig de correu m\u00ednim
 LBL_zimbraMailMinPollingInterval = Interval de sondeig de correu m\u00ednim:
