--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -980,6 +980,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Svaradresse til kvittering for l\u00e6st
 LBL_zimbraPrefReadReceiptsToAddress = Svaradresse til kvittering for l\u00e6st: 
 LBL_zimbraPrefMailSendReadReceipts = Send kvitteringer for l\u00e6st:
 LBL_zimbraFeatureReadReceiptsEnabled = Aktiv\u00e9r kvitteringer for l\u00e6st
+LBL_zimbraFeatureEnableMailRecall = mail tilbagekaldelse
+LBL_zimbraFeatureMailRecallInterval = Mail tilbagekaldelse al
 LBL_zimbraPrefMandatorySpellCheckEnabled = Aktiv\u00e9r obligatorisk stavekontrol
 SEND_READ_RECEIPT_PROMPT = Prompt
 SEND_READ_RECEIPT_NEVER = Aldrig
@@ -990,6 +992,8 @@ MSG_zimbraPrefMailPollingInterval = Polling-interval (tidsrum hvorefter der skal
 LBL_asNewMailArrives = Ved modtagelse af ny e-mail
 LBL_manual = Manuelt
 LBL_minute = minutter
+LBL_recallminute = {0} minutter
+LBL_recallminutes = {0} minutter
 LBL_zimbraPrefMailPollingInterval = Polling-interval (tidsrum hvorefter der skal kontrolleres for ny mail):
 MSG_zimbraMailMinPollingInterval = Minimum interval for mail-polling
 LBL_zimbraMailMinPollingInterval = Minimum interval for mail-polling:
