--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -993,6 +993,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Direcci\u00f3n para el mensaje de confirma
 LBL_zimbraPrefReadReceiptsToAddress = Direcci\u00f3n para el mensaje de confirmaci\u00f3n de lectura del mensaje recibido: 
 LBL_zimbraPrefMailSendReadReceipts = Enviar confirmaciones de lectura:
 LBL_zimbraFeatureReadReceiptsEnabled = Habilitar confirmaciones de lectura
+LBL_zimbraFeatureEnableMailRecall = retiro de correo
+LBL_zimbraFeatureMailRecallInterval = intervalo de recuperaci\u00f3n de correo
 LBL_zimbraPrefMandatorySpellCheckEnabled = Habilitar el corrector ortogr\u00e1fico obligatorio
 SEND_READ_RECEIPT_PROMPT = Preguntar
 SEND_READ_RECEIPT_NEVER = Nunca
@@ -1003,6 +1005,8 @@ MSG_zimbraPrefMailPollingInterval = Intervalo de consulta (tiempo de espera para
 LBL_asNewMailArrives = En cuanto llegue correo nuevo
 LBL_manual = Manualmente
 LBL_minute = minutos
+LBL_recallminute = {0} minutos
+LBL_recallminutes = {0} minutos
 LBL_zimbraPrefMailPollingInterval = Intervalo de comprobaci\u00f3n (per\u00edodo despu\u00e9s del cual comprobaremos si tienes mensajes nuevos):
 MSG_zimbraMailMinPollingInterval = Intervalo m\u00ednimo de consulta de correo
 LBL_zimbraMailMinPollingInterval = Intervalo de comprobaci\u00f3n m\u00ednimo:
