--- a/WebRoot/messages/ZaMsg_fr.properties
+++ b/WebRoot/messages/ZaMsg_fr.properties
@@ -996,6 +996,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Adresse de r\u00e9ponse pour le mail d\u20
 LBL_zimbraPrefReadReceiptsToAddress = Adresse de r\u00e9ponse pour le mail d\u2019accus\u00e9 de lecture\u00a0: 
 LBL_zimbraPrefMailSendReadReceipts = Envoyer les accus\u00e9s de lecture \u00e0 l\u2019adresse\u00a0:
 LBL_zimbraFeatureReadReceiptsEnabled = Activer les accus\u00e9s de lecture
+LBL_zimbraFeatureEnableMailRecall = rappel de courrier
+LBL_zimbraFeatureMailRecallInterval = intervalle de rappel de courrier
 LBL_zimbraPrefMandatorySpellCheckEnabled = Activer la v\u00e9rification orthographique obligatoire
 SEND_READ_RECEIPT_PROMPT = Solliciter un accus\u00e9 de lecture
 SEND_READ_RECEIPT_NEVER = Jamais
@@ -1006,6 +1008,8 @@ MSG_zimbraPrefMailPollingInterval = Intervalle d\u2019enqu\u00eate (dur\u00e9e a
 LBL_asNewMailArrives = D\u00e8s qu\u2019un nouveau mail arrive
 LBL_manual = Manuellement
 LBL_minute = minutes
+LBL_recallminute = {0} minute
+LBL_recallminutes = {0} minutes
 LBL_zimbraPrefMailPollingInterval = Intervalle de consultation (fr\u00e9quence avec laquelle le syst\u00e8me d\u00e9termine si de nouveaux mails sont arriv\u00e9s)\u00a0:
 MSG_zimbraMailMinPollingInterval = P\u00e9riode de consultation minimale
 LBL_zimbraMailMinPollingInterval = Intervalle de consultation minimum\u00a0:
