--- a/WebRoot/messages/ZaMsg_hr.properties
+++ b/WebRoot/messages/ZaMsg_hr.properties
@@ -1009,6 +1009,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Reply-to address for read receipt message
 LBL_zimbraPrefReadReceiptsToAddress = Reply-to address for read receipt message: 
 LBL_zimbraPrefMailSendReadReceipts = Send read receipts:
 LBL_zimbraFeatureReadReceiptsEnabled = Enable read receipts
+LBL_zimbraFeatureEnableMailRecall = Mail recall
+LBL_zimbraFeatureMailRecallInterval = Mail recall interval
 LBL_zimbraPrefMandatorySpellCheckEnabled = Enable mandatory spell check
 SEND_READ_RECEIPT_PROMPT = Prompt
 SEND_READ_RECEIPT_NEVER = Never
@@ -1018,7 +1020,9 @@ LBL_zimbraPrefOutOfOfficeCacheDuration = Out of office cache lifetime:
 MSG_zimbraPrefMailPollingInterval = Polling interval (time after which to check for new mail)
 LBL_asNewMailArrives = As New Mail Arrives
 LBL_manual = Manually
-LBL_minute = minutes
+LBL_minute = minuta
+LBL_recallminute = {0} minuta
+LBL_recallminutes = {0} minuta
 LBL_zimbraPrefMailPollingInterval = Polling interval (time after which to check for new mail):
 MSG_zimbraMailMinPollingInterval = Minimum mail polling interval
 LBL_zimbraMailMinPollingInterval = Minimum mail polling interval:
