--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -980,6 +980,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Indirizzo di risposta per messaggio di con
 LBL_zimbraPrefReadReceiptsToAddress = Indirizzo di risposta per messaggio di conferma di lettura: 
 LBL_zimbraPrefMailSendReadReceipts = Invia conferme di lettura:
 LBL_zimbraFeatureReadReceiptsEnabled = Attiva conferme di lettura
+LBL_zimbraFeatureEnableMailRecall = richiamo postale
+LBL_zimbraFeatureMailRecallInterval = intervallo di richiamo della posta
 LBL_zimbraPrefMandatorySpellCheckEnabled = Attiva controllo ortografico obbligatorio
 SEND_READ_RECEIPT_PROMPT = Richiesta di conferma
 SEND_READ_RECEIPT_NEVER = Mai
@@ -990,6 +992,8 @@ MSG_zimbraPrefMailPollingInterval = Intervallo di ricezione automatica della nuo
 LBL_asNewMailArrives = All\u2019arrivo di nuova posta
 LBL_manual = Manualmente
 LBL_minute = minuti
+LBL_recallminute = {0} minuti
+LBL_recallminutes = {0} minuti
 LBL_zimbraPrefMailPollingInterval = Intervallo di ricezione automatica della nuova posta:
 MSG_zimbraMailMinPollingInterval = Intervallo minimo di ricezione automatica posta
 LBL_zimbraMailMinPollingInterval = Intervallo minimo di ricezione automatica posta:
