--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -988,6 +988,8 @@ MSG_zimbraPrefReadReceiptsToAddress = \uc77d\uc74c \ud655\uc778 \uba54\uc2dc\uc9
 LBL_zimbraPrefReadReceiptsToAddress = \uc77d\uc74c \ud655\uc778 \uba54\uc2dc\uc9c0\ub97c \uc704\ud55c \ub2f5\uc7a5 \uc8fc\uc18c: 
 LBL_zimbraPrefMailSendReadReceipts = \uc77d\uc74c \ud655\uc778 \ubcf4\ub0b4\uae30:
 LBL_zimbraFeatureReadReceiptsEnabled = \uc77d\uc74c \ud655\uc778 \uc0ac\uc6a9
+LBL_zimbraFeatureEnableMailRecall = \uba54\uc77c \ub9ac\ucf5c
+LBL_zimbraFeatureMailRecallInterval = \uba54\uc77c \ub9ac\ucf5c \uac04\uaca9
 LBL_zimbraPrefMandatorySpellCheckEnabled = \ud544\uc218 \ub9de\ucda4\ubc95 \uac80\uc0ac \uc0ac\uc6a9
 SEND_READ_RECEIPT_PROMPT = \ub9e4\ubc88 \ud655\uc778
 SEND_READ_RECEIPT_NEVER = \uc548 \ud568
@@ -998,6 +1000,8 @@ MSG_zimbraPrefMailPollingInterval = \ud3f4\ub9c1 \uac04\uaca9(\uc0c8 \uba54\uc77
 LBL_asNewMailArrives = \uc0c8 \uba54\uc77c \ub3c4\ucc29 \uc2dc
 LBL_manual = \uc218\ub3d9\uc73c\ub85c
 LBL_minute = \ubd84
+LBL_recallminute = {0} \ubd84
+LBL_recallminutes = {0} \ubd84
 LBL_zimbraPrefMailPollingInterval = \ud3f4\ub9c1 \uac04\uaca9(\uc0c8 \uba54\uc77c \ud655\uc778 \uc804 \uacbd\uacfc \uc2dc\uac04):
 MSG_zimbraMailMinPollingInterval = \ucd5c\uc18c \uba54\uc77c \ud3f4\ub9c1 \uac04\uaca9
 LBL_zimbraMailMinPollingInterval = \ucd5c\uc18c \uba54\uc77c \ud3f4\ub9c1 \uac04\uaca9:
