--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -1007,6 +1007,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Alamat balas kepada untuk mesej penerimaan
 LBL_zimbraPrefReadReceiptsToAddress = Alamat balas kepada untuk mesej penerimaan dibaca: 
 LBL_zimbraPrefMailSendReadReceipts = Hantar penerimaan dibaca:
 LBL_zimbraFeatureReadReceiptsEnabled = Dayakan penerimaan dibaca
+LBL_zimbraFeatureEnableMailRecall = ingat semula mel
+LBL_zimbraFeatureMailRecallInterval = selang ingat semula mel
 LBL_zimbraPrefMandatorySpellCheckEnabled = Dayakan semakan ejaan wajib
 SEND_READ_RECEIPT_PROMPT = Gesaan
 SEND_READ_RECEIPT_NEVER = Jangan Sesekali
@@ -1017,6 +1019,8 @@ MSG_zimbraPrefMailPollingInterval = Selang peninjauan (selang masa untuk menyema
 LBL_asNewMailArrives = Sebaik Mel Baharu Tiba
 LBL_manual = Secara manual
 LBL_minute = minit
+LBL_recallminute = {0} minit
+LBL_recallminutes = {0} minit
 LBL_zimbraPrefMailPollingInterval = Selang peninjauan (selang masa untuk menyemak mel baharu):
 MSG_zimbraMailMinPollingInterval = Selang peninjauan mel minimum
 LBL_zimbraMailMinPollingInterval = Selang peninjauan mel minimum:
