--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -980,6 +980,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Antwoordadres voor gelezen-ontvangstberich
 LBL_zimbraPrefReadReceiptsToAddress = Antwoordadres voor gelezen-ontvangstbericht: 
 LBL_zimbraPrefMailSendReadReceipts = Gelezen-ontvangstberichten verzenden:
 LBL_zimbraFeatureReadReceiptsEnabled = Gelezen-ontvangstberichten inschakelen
+LBL_zimbraFeatureEnableMailRecall = mail terugroepen
+LBL_zimbraFeatureMailRecallInterval = e-mail recall-interval
 LBL_zimbraPrefMandatorySpellCheckEnabled = Verplichte spellingcontrole inschakelen
 SEND_READ_RECEIPT_PROMPT = Vraag mij
 SEND_READ_RECEIPT_NEVER = Nooit
@@ -990,6 +992,8 @@ MSG_zimbraPrefMailPollingInterval = Opvragingsinterval (tijd tot controle op nie
 LBL_asNewMailArrives = Als nieuwe e-mail binnenkomt
 LBL_manual = Handmatig
 LBL_minute = minuten
+LBL_recallminute = {0} minuten
+LBL_recallminutes = {0} minuten
 LBL_zimbraPrefMailPollingInterval = Opvraaginterval (tijd tot controle op nieuwe e-mail):
 MSG_zimbraMailMinPollingInterval = Minimale interval voor het controleren op nieuwe e-mail
 LBL_zimbraMailMinPollingInterval = Minimale interval voor het controleren op nieuwe e-mail:
