--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -1000,6 +1000,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Adres zwrotny dla potwierdzenia przeczytan
 LBL_zimbraPrefReadReceiptsToAddress = Adres zwrotny dla potwierdzenia przeczytania wiadomo\u015bci: 
 LBL_zimbraPrefMailSendReadReceipts = Wysy\u0142aj potwierdzenia przeczytania:
 LBL_zimbraFeatureReadReceiptsEnabled = W\u0142\u0105cz potwierdzenia przeczytania
+LBL_zimbraFeatureEnableMailRecall = odwo\u0142anie poczty
+LBL_zimbraFeatureMailRecallInterval = interwa\u0142 przypominania poczty
 LBL_zimbraPrefMandatorySpellCheckEnabled = W\u0142\u0105cz obowi\u0105zkowe sprawdzanie pisowni
 SEND_READ_RECEIPT_PROMPT = Pytaj
 SEND_READ_RECEIPT_NEVER = Nigdy
@@ -1010,6 +1012,8 @@ MSG_zimbraPrefMailPollingInterval = Interwa\u0142 sprawdzania wiadomo\u015bci (c
 LBL_asNewMailArrives = Po odebraniu nowej poczty
 LBL_manual = R\u0119cznie
 LBL_minute = minut(y)
+LBL_recallminute = {0} minut
+LBL_recallminutes = {0} minut
 LBL_zimbraPrefMailPollingInterval = Interwa\u0142 sprawdzania wiadomo\u015bci (czas, po kt\u00f3rym sprawdza\u0107 poczt\u0119):
 MSG_zimbraMailMinPollingInterval = Minimalny okres interwa\u0142u sprawdzania wiadomo\u015bci
 LBL_zimbraMailMinPollingInterval = Minimalny interwa\u0142 sprawdzania wiadomo\u015bci:
