--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -1007,6 +1007,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Adresa la care se trimite confirmarea de c
 LBL_zimbraPrefReadReceiptsToAddress = Adresa la care se trimite confirmarea de citire: 
 LBL_zimbraPrefMailSendReadReceipts = Trimitere confirm\u0103ri de citire:
 LBL_zimbraFeatureReadReceiptsEnabled = Activare confirm\u0103ri de citire
+LBL_zimbraFeatureEnableMailRecall = rechemare prin e-mail
+LBL_zimbraFeatureMailRecallInterval = interval de rechemare a e-mailului
 LBL_zimbraPrefMandatorySpellCheckEnabled = Activare verificare ortografic\u0103 obligatorie
 SEND_READ_RECEIPT_PROMPT = \u00centreab\u0103
 SEND_READ_RECEIPT_NEVER = Niciodat\u0103
@@ -1017,6 +1019,8 @@ MSG_zimbraPrefMailPollingInterval = Interval de interogare ciclic\u0103 (timpul 
 LBL_asNewMailArrives = La primirea unui mesaj
 LBL_manual = Manual
 LBL_minute = minute
+LBL_recallminute = {0} minute
+LBL_recallminutes = {0} minute
 LBL_zimbraPrefMailPollingInterval = Interval de interogare ciclic\u0103 (timpul dup\u0103 care se verific\u0103 dac\u0103 sunt mesaje noi):
 MSG_zimbraMailMinPollingInterval = Interval minim de interogare ciclic\u0103 a mesajelor
 LBL_zimbraMailMinPollingInterval = Interval minim de interogare ciclic\u0103 a mesajelor:
