--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -980,6 +980,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Svarsadress f\u00f6r l\u00e4skvitto
 LBL_zimbraPrefReadReceiptsToAddress = Svarsadress f\u00f6r l\u00e4skvitto: 
 LBL_zimbraPrefMailSendReadReceipts = Skicka l\u00e4skvitton:
 LBL_zimbraFeatureReadReceiptsEnabled = Aktivera l\u00e4skvitton
+LBL_zimbraFeatureEnableMailRecall = mail \u00e5terkallelse
+LBL_zimbraFeatureMailRecallInterval = e-post\u00e5terst\u00e4llningsintervall
 LBL_zimbraPrefMandatorySpellCheckEnabled = Aktivera obligatorisk stavningskontroll
 SEND_READ_RECEIPT_PROMPT = Fr\u00e5ga
 SEND_READ_RECEIPT_NEVER = Aldrig
@@ -990,6 +992,8 @@ MSG_zimbraPrefMailPollingInterval = S\u00f6kintervall (efter hur l\u00e5ng tid s
 LBL_asNewMailArrives = N\u00e4r ny e-post anl\u00e4nder
 LBL_manual = Manuellt
 LBL_minute = minuter
+LBL_recallminute = {0} minuter
+LBL_recallminutes = {0} minuter
 LBL_zimbraPrefMailPollingInterval = S\u00f6kintervall (hur l\u00e5ng tid som ska g\u00e5 innan du vill kontrollera om det finns nya e-postmeddelanden):
 MSG_zimbraMailMinPollingInterval = Minsta s\u00f6kintervall f\u00f6r e-post
 LBL_zimbraMailMinPollingInterval = Minsta s\u00f6kintervall f\u00f6r e-post:
