--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -1005,6 +1005,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Okundu bilgisi mesaj\u0131 i\u00e7in yan\u
 LBL_zimbraPrefReadReceiptsToAddress = Okundu bilgisi mesaj\u0131 i\u00e7in yan\u0131t adresi: 
 LBL_zimbraPrefMailSendReadReceipts = Okundu bilgisi g\u00f6nder:
 LBL_zimbraFeatureReadReceiptsEnabled = Okundu bilgisini etkinle\u015ftir
+LBL_zimbraFeatureEnableMailRecall = posta geri \u00e7\u0061\u011f\u0131\u0072\u006d\u0061
+LBL_zimbraFeatureMailRecallInterval = posta geri \u00e7\u0061\u011f\u0131\u0072\u006d\u0061 \u0061\u0072\u0061\u006c\u0131\u011f\u0131
 LBL_zimbraPrefMandatorySpellCheckEnabled = Zorunlu yaz\u0131m denetimini etkinle\u015ftir
 SEND_READ_RECEIPT_PROMPT = Bilgi \u0130ste
 SEND_READ_RECEIPT_NEVER = Hi\u00e7bir zaman
@@ -1015,6 +1017,8 @@ MSG_zimbraPrefMailPollingInterval = Sorgulama aral\u0131\u011f\u0131 (yeni posta
 LBL_asNewMailArrives = Yeni Posta Geldi\u011finde
 LBL_manual = El ile
 LBL_minute = dakika
+LBL_recallminute = {0} dakika
+LBL_recallminutes = {0} dakika
 LBL_zimbraPrefMailPollingInterval = Sorgulama aral\u0131\u011f\u0131 (yeni postan\u0131n kontrol edilece\u011fi s\u00fcre):
 MSG_zimbraMailMinPollingInterval = Posta sorgulama aral\u0131\u011f\u0131 alt s\u0131n\u0131r\u0131
 LBL_zimbraMailMinPollingInterval = Posta sorgulama aral\u0131\u011f\u0131 alt s\u0131n\u0131r\u0131:
