--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -989,6 +989,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Antwortadresse f\u00fcr Lesebest\u00e4tigu
 LBL_zimbraPrefReadReceiptsToAddress = Antwortadresse f\u00fcr Lesebest\u00e4tigung: 
 LBL_zimbraPrefMailSendReadReceipts = Lesebest\u00e4tigungen senden:
 LBL_zimbraFeatureReadReceiptsEnabled = Lesebest\u00e4tigungen aktivieren
+LBL_zimbraFeatureEnableMailRecall = Mail-R\u00fcckruf
+LBL_zimbraFeatureMailRecallInterval = E-Mail-R\u00fcckruf
 LBL_zimbraPrefMandatorySpellCheckEnabled = Obligatorische Rechtschreibpr\u00fcfung aktivieren
 SEND_READ_RECEIPT_PROMPT = Auffordern
 SEND_READ_RECEIPT_NEVER = Nie
@@ -999,6 +1001,8 @@ MSG_zimbraPrefMailPollingInterval = Abrufintervall (Zeit, nach der auf neue Mail
 LBL_asNewMailArrives = Beim Eingang neuer Mail
 LBL_manual = Manuell
 LBL_minute = Minuten
+LBL_recallminute = {0} Minuten
+LBL_recallminutes = {0} Minuten
 LBL_zimbraPrefMailPollingInterval = Abrufintervall (Zeit, nach der auf neue Mails gepr\u00fcft wird):
 MSG_zimbraMailMinPollingInterval = Mindestabrufintervall f\u00fcr Mails
 LBL_zimbraMailMinPollingInterval = Mindestabrufintervall f\u00fcr Mails:
