--- a/WebRoot/messages/ZaMsg_en_GB.properties
+++ b/WebRoot/messages/ZaMsg_en_GB.properties
@@ -975,6 +975,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Reply-to address for read receipt message
 LBL_zimbraPrefReadReceiptsToAddress = Reply-to address for read receipt message: 
 LBL_zimbraPrefMailSendReadReceipts = Send read receipts
 LBL_zimbraFeatureReadReceiptsEnabled = Enable read receipts
+LBL_zimbraFeatureEnableMailRecall = Mail recall
+LBL_zimbraFeatureMailRecallInterval = Mail recall interval
 LBL_zimbraPrefMandatorySpellCheckEnabled = Enable mandatory spell check
 SEND_READ_RECEIPT_PROMPT = Prompt
 SEND_READ_RECEIPT_NEVER = Never
@@ -985,6 +987,8 @@ MSG_zimbraPrefMailPollingInterval = Polling interval (time after which to check 
 LBL_asNewMailArrives = As New Mail Arrives
 LBL_manual = Manually
 LBL_minute = minutes
+LBL_recallminute = {0} minute
+LBL_recallminutes = {0} minutes
 LBL_zimbraPrefMailPollingInterval = Polling interval (time after which to check for new mail):
 MSG_zimbraMailMinPollingInterval = Minimum mail polling interval
 LBL_zimbraMailMinPollingInterval = Minimum mail polling interval:
