--- a/WebRoot/messages/ZaMsg_fr_CA.properties
+++ b/WebRoot/messages/ZaMsg_fr_CA.properties
@@ -1007,6 +1007,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Adresse de r\u00e9ponse pour le courriel d
 LBL_zimbraPrefReadReceiptsToAddress = Adresse de r\u00e9ponse pour le courriel d\u2019accus\u00e9 de r\u00e9ception\u00a0: 
 LBL_zimbraPrefMailSendReadReceipts = Envoyer les accus\u00e9s de r\u00e9ception \u00e0 l\u2019adresse\u00a0:
 LBL_zimbraFeatureReadReceiptsEnabled = Activer les accus\u00e9s de r\u00e9ception
+LBL_zimbraFeatureEnableMailRecall = rappel de courrier
+LBL_zimbraFeatureMailRecallInterval = intervalle de rappel de courrier
 LBL_zimbraPrefMandatorySpellCheckEnabled = Activer la v\u00e9rification orthographique obligatoire
 SEND_READ_RECEIPT_PROMPT = Demander
 SEND_READ_RECEIPT_NEVER = Jamais
@@ -1017,6 +1019,8 @@ MSG_zimbraPrefMailPollingInterval = Intervalle d\u2019enqu\u00eate (dur\u00e9e a
 LBL_asNewMailArrives = D\u00e8s qu\u2019un nouveau courriel arrive
 LBL_manual = Manuellement
 LBL_minute = minutes
+LBL_recallminute = {0} minute
+LBL_recallminutes = {0} minutes
 LBL_zimbraPrefMailPollingInterval = Intervalle de consultation (fr\u00e9quence avec laquelle le syst\u00e8me d\u00e9termine si de nouveaux courriels sont arriv\u00e9s)\u00a0:
 MSG_zimbraMailMinPollingInterval = Intervalle de consultation minimale
 LBL_zimbraMailMinPollingInterval = Intervalle de consultation minimale\u00a0:
