--- a/WebRoot/messages/ZaMsg_hi.properties
+++ b/WebRoot/messages/ZaMsg_hi.properties
@@ -980,6 +980,8 @@ MSG_zimbraPrefReadReceiptsToAddress = \u092a\u0922\u093c\u0928\u0947 \u0915\u094
 LBL_zimbraPrefReadReceiptsToAddress = \u092a\u0922\u093c\u0928\u0947 \u0915\u0940 \u092a\u0941\u0937\u094d\u200d\u091f\u093f \u0938\u0902\u0926\u0947\u0936 \u0915\u0947 \u0932\u093f\u090f \u0907\u0928\u094d\u200d\u0939\u0947\u0902 \u0909\u0924\u094d\u200d\u0924\u0930 \u0926\u0947\u0902 \u092a\u0924\u093e: 
 LBL_zimbraPrefMailSendReadReceipts = \u092a\u0922\u093c\u0928\u0947 \u0915\u0940 \u092a\u0941\u0937\u094d\u200d\u091f\u093f\u092f\u093e\u0901 \u092d\u0947\u091c\u0947\u0902:
 LBL_zimbraFeatureReadReceiptsEnabled = \u092a\u0922\u093c\u0928\u0947 \u0915\u0940 \u092a\u0941\u0937\u094d\u200d\u091f\u093f\u092f\u093e\u0901 \u0938\u0915\u094d\u0937\u092e \u0915\u0930\u0947\u0902
+LBL_zimbraFeatureEnableMailRecall = \u092e\u0947\u0932 \u0930\u093f\u0915\u0949\u0932
+LBL_zimbraFeatureMailRecallInterval = \u092e\u0947\u0932 \u0930\u093f\u0915\u0949\u0932 \u0905\u0902\u0924\u0930\u093e\u0932
 LBL_zimbraPrefMandatorySpellCheckEnabled = \u0905\u0928\u093f\u0935\u093e\u0930\u094d\u092f \u0935\u0930\u094d\u0924\u0928\u0940 \u091c\u093e\u0901\u091a \u0938\u0915\u094d\u0937\u092e \u0915\u0930\u0947\u0902
 SEND_READ_RECEIPT_PROMPT = \u0938\u0902\u0915\u0947\u0924
 SEND_READ_RECEIPT_NEVER = \u0915\u092d\u0940 \u0928\u0939\u0940\u0902
@@ -990,6 +992,8 @@ MSG_zimbraPrefMailPollingInterval = \u092a\u094b\u0932\u093f\u0902\u0917 \u0905\
 LBL_asNewMailArrives = \u091c\u092c \u0928\u092f\u093e \u092e\u0947\u0932 \u0906\u0924\u093e \u0939\u0948
 LBL_manual = \u092e\u0948\u0928\u094d\u092f\u0941\u0905\u0932 \u0930\u0942\u092a \u0938\u0947
 LBL_minute = \u092e\u093f\u0928\u091f
+LBL_recallminute = {0} \u092e\u093f\u0928\u091f
+LBL_recallminutes = {0} \u092e\u093f\u0928\u091f
 LBL_zimbraPrefMailPollingInterval = \u092a\u094b\u0932\u093f\u0902\u0917 \u0905\u0902\u0924\u0930\u093e\u0932 (\u0928\u0908 \u092e\u0947\u0932 \u091c\u093e\u0901\u091a\u0928\u0947 \u0915\u0947 \u092c\u0940\u091a \u0915\u093e \u0905\u0902\u0924\u0930\u093e\u0932):
 MSG_zimbraMailMinPollingInterval = \u0928\u094d\u200d\u092f\u0942\u0928\u0924\u092e \u092e\u0947\u0932 \u092a\u094b\u0932\u093f\u0902\u0917 \u0905\u0902\u0924\u0930\u093e\u0932
 LBL_zimbraMailMinPollingInterval = \u0928\u094d\u200d\u092f\u0942\u0928\u0924\u092e \u092e\u0947\u0932 \u092a\u094b\u0932\u093f\u0902\u0917 \u0905\u0902\u0924\u0930\u093e\u0932:
