--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -1009,6 +1009,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Alamat balas-ke untuk pesan laporan dibaca
 LBL_zimbraPrefReadReceiptsToAddress = Alamat balas-ke untuk pesan laporan dibaca: 
 LBL_zimbraPrefMailSendReadReceipts = Kirim laporan dibaca:
 LBL_zimbraFeatureReadReceiptsEnabled = Aktifkan laporan dibaca
+LBL_zimbraFeatureEnableMailRecall = penarikan surat
+LBL_zimbraFeatureMailRecallInterval = interval pengingat surat
 LBL_zimbraPrefMandatorySpellCheckEnabled = Aktifkan pemeriksaan ejaan wajib
 SEND_READ_RECEIPT_PROMPT = Prompt
 SEND_READ_RECEIPT_NEVER = Tidak pernah
@@ -1019,6 +1021,8 @@ MSG_zimbraPrefMailPollingInterval = Interval polling (waktu sebelum pemeriksaan 
 LBL_asNewMailArrives = Saat Email Baru Masuk
 LBL_manual = Secara manual
 LBL_minute = menit
+LBL_recallminute = {0} menit
+LBL_recallminutes = {0} menit
 LBL_zimbraPrefMailPollingInterval = Interval polling (waktu sebelum pemeriksaan email baru):
 MSG_zimbraMailMinPollingInterval = Interval polling email minimal
 LBL_zimbraMailMinPollingInterval = Interval polling email minimal:
