--- a/WebRoot/messages/ZaMsg_ja.properties
+++ b/WebRoot/messages/ZaMsg_ja.properties
@@ -988,6 +988,8 @@ MSG_zimbraPrefReadReceiptsToAddress = \u95b2\u89a7\u78ba\u8a8d\u30e1\u30c3\u30bb
 LBL_zimbraPrefReadReceiptsToAddress = \u95b2\u89a7\u78ba\u8a8d\u30e1\u30c3\u30bb\u30fc\u30b8\u306e\u8fd4\u4fe1\u30a2\u30c9\u30ec\u30b9\uff1a 
 LBL_zimbraPrefMailSendReadReceipts = \u95b2\u89a7\u78ba\u8a8d\u3092\u9001\u4fe1\uff1a
 LBL_zimbraFeatureReadReceiptsEnabled = \u95b2\u89a7\u78ba\u8a8d\u3092\u6709\u52b9\u306b\u3059\u308b
+LBL_zimbraFeatureEnableMailRecall = \u30e1\u30fc\u30eb\u306e\u53d6\u308a\u6d88\u3057
+LBL_zimbraFeatureMailRecallInterval = \u30e1\u30fc\u30eb\u53d6\u308a\u6d88\u3057\u306e\u671f\u9650
 LBL_zimbraPrefMandatorySpellCheckEnabled = \u30b9\u30da\u30eb\u30c1\u30a7\u30c3\u30af\u3092\u5f37\u5236\u7684\u306b\u5b9f\u884c\u3059\u308b
 SEND_READ_RECEIPT_PROMPT = \u30e1\u30c3\u30bb\u30fc\u30b8\u3092\u8868\u793a\u3059\u308b
 SEND_READ_RECEIPT_NEVER = \u9001\u4fe1\u3057\u306a\u3044
@@ -998,6 +1000,8 @@ MSG_zimbraPrefMailPollingInterval = \u30dd\u30fc\u30ea\u30f3\u30b0\u9593\u9694\u
 LBL_asNewMailArrives = \u65b0\u7740\u30e1\u30fc\u30eb\u304c\u5c4a\u3044\u305f\u3068\u304d
 LBL_manual = \u624b\u52d5
 LBL_minute = \u5206
+LBL_recallminute = {0}\u5206
+LBL_recallminutes = {0}\u5206
 LBL_zimbraPrefMailPollingInterval = \u30dd\u30fc\u30ea\u30f3\u30b0\u9593\u9694\uff08\u65b0\u7740\u30e1\u30fc\u30eb\u3092\u78ba\u8a8d\u3059\u308b\u9593\u9694\uff09\uff1a
 MSG_zimbraMailMinPollingInterval = \u30e1\u30fc\u30eb\u3092\u30dd\u30fc\u30ea\u30f3\u30b0\u3059\u308b\u6700\u5c0f\u9593\u9694
 LBL_zimbraMailMinPollingInterval = \u30e1\u30fc\u30eb\u3092\u30dd\u30fc\u30ea\u30f3\u30b0\u3059\u308b\u6700\u5c0f\u9593\u9694\uff1a
