--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -1009,6 +1009,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Svaradresse for lesekvittering
 LBL_zimbraPrefReadReceiptsToAddress = Svaradresse for lesekvittering: 
 LBL_zimbraPrefMailSendReadReceipts = Send lesekvitteringer:
 LBL_zimbraFeatureReadReceiptsEnabled = Aktiver lesekvitteringer
+LBL_zimbraFeatureEnableMailRecall = tilbakekalling av e-post
+LBL_zimbraFeatureMailRecallInterval = intervall for tilbakekalling av e-post
 LBL_zimbraPrefMandatorySpellCheckEnabled = Aktiver obligatorisk stavekontroll
 SEND_READ_RECEIPT_PROMPT = Sp\u00f8r
 SEND_READ_RECEIPT_NEVER = Aldri
@@ -1019,6 +1021,8 @@ MSG_zimbraPrefMailPollingInterval = Avsp\u00f8rringsintervall (mellom s\u00f8k e
 LBL_asNewMailArrives = N\u00e5r ny e-post mottas
 LBL_manual = Manuelt
 LBL_minute = minutter
+LBL_recallminute = {0} minutter
+LBL_recallminutes = {0} minutter
 LBL_zimbraPrefMailPollingInterval = Avsp\u00f8rringsintervall (mellom s\u00f8k etter ny e-post):
 MSG_zimbraMailMinPollingInterval = Minste avsp\u00f8rringsintervall for e-post
 LBL_zimbraMailMinPollingInterval = Minste avsp\u00f8rringsintervall for e-post:
