--- a/WebRoot/messages/ZaMsg_pt.properties
+++ b/WebRoot/messages/ZaMsg_pt.properties
@@ -1009,6 +1009,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Endere\u00e7o de resposta para mensagem de
 LBL_zimbraPrefReadReceiptsToAddress = Endere\u00e7o de resposta para mensagem de confirma\u00e7\u00e3o de leitura: 
 LBL_zimbraPrefMailSendReadReceipts = Enviar confirma\u00e7\u00f5es de leitura:
 LBL_zimbraFeatureReadReceiptsEnabled = Ativar confirma\u00e7\u00f5es de leitura
+LBL_zimbraFeatureEnableMailRecall = recall de e-mail
+LBL_zimbraFeatureMailRecallInterval = intervalo de recupera\u00e7\u00e3o de e-mail
 LBL_zimbraPrefMandatorySpellCheckEnabled = Ativar verifica\u00e7\u00e3o ortogr\u00e1fica obrigat\u00f3ria
 SEND_READ_RECEIPT_PROMPT = Perguntar
 SEND_READ_RECEIPT_NEVER = Nunca
@@ -1019,6 +1021,8 @@ MSG_zimbraPrefMailPollingInterval = Intervalo de verifica\u00e7\u00e3o (tempo ap
 LBL_asNewMailArrives = Ao receber novo correio
 LBL_manual = Manualmente
 LBL_minute = minutos
+LBL_recallminute = {0} minutos
+LBL_recallminutes = {0} minutos
 LBL_zimbraPrefMailPollingInterval = Intervalo de verifica\u00e7\u00e3o (tempo ap\u00f3s o qual se ir\u00e1 verificar se existem novas mensagens de correio):
 MSG_zimbraMailMinPollingInterval = Intervalo m\u00ednimo de verifica\u00e7\u00e3o de correio
 LBL_zimbraMailMinPollingInterval = Intervalo m\u00ednimo de verifica\u00e7\u00e3o de correio:
