--- a/WebRoot/messages/ZaMsg_ta.properties
+++ b/WebRoot/messages/ZaMsg_ta.properties
@@ -1009,6 +1009,8 @@ MSG_zimbraPrefReadReceiptsToAddress = \u0b9a\u0bc6\u0baf\u0bcd\u0ba4\u0bbf\u0baf
 LBL_zimbraPrefReadReceiptsToAddress = \u0b9a\u0bc6\u0baf\u0bcd\u0ba4\u0bbf\u0baf\u0bc8\u0baa\u0bcd \u0baa\u0b9f\u0bbf\u0b95\u0bcd\u0b95\u0bc1\u0bae\u0bcd \u0bae\u0bc1\u0b95\u0bb5\u0bb0\u0bbf\u0b95\u0bcd\u0b95\u0bc1\u0baa\u0bcd \u0baa\u0ba4\u0bbf\u0bb2\u0bb3\u0bbf: 
 LBL_zimbraPrefMailSendReadReceipts = \u0baa\u0b9f\u0bbf\u0b95\u0bcd\u0b95\u0bc1\u0bae\u0bcd \u0bb0\u0b9a\u0bc0\u0ba4\u0bc1\u0b95\u0bb3\u0bc8 \u0b85\u0ba9\u0bc1\u0baa\u0bcd\u0baa\u0bc1:
 LBL_zimbraFeatureReadReceiptsEnabled = \u0baa\u0b9f\u0bbf\u0b95\u0bcd\u0b95\u0bc1\u0bae\u0bcd \u0bb0\u0b9a\u0bc0\u0ba4\u0bc1\u0b95\u0bb3\u0bc8 \u0b87\u0baf\u0b95\u0bcd\u0b95\u0bc1
+LBL_zimbraFeatureEnableMailRecall = \u0b85\u0b9e\u0bcd\u0b9a\u0bb2\u0bcd \u0ba8\u0bbf\u0ba9\u0bc8\u0bb5\u0bc1
+LBL_zimbraFeatureMailRecallInterval = \u0b85\u0b9e\u0bcd\u0b9a\u0bb2\u0bcd \u0ba4\u0bbf\u0bb0\u0bc1\u0bae\u0bcd\u0baa \u0b85\u0bb4\u0bc8\u0b95\u0bcd\u0b95\u0bc1\u0bae\u0bcd \u0b87\u0b9f\u0bc8\u0bb5\u0bc6\u0bb3\u0bbf
 LBL_zimbraPrefMandatorySpellCheckEnabled = \u0b95\u0b9f\u0bcd\u0b9f\u0bbe\u0baf \u0b8e\u0bb4\u0bc1\u0ba4\u0bcd\u0ba4\u0bc1\u0baa\u0bcd\u0baa\u0bbf\u0bb4\u0bc8\u0b9a\u0bcd \u0b9a\u0bb0\u0bbf\u0baa\u0bbe\u0bb0\u0bcd\u0baa\u0bcd\u0baa\u0bc8 \u0b87\u0baf\u0b95\u0bcd\u0b95\u0bc1
 SEND_READ_RECEIPT_PROMPT = \u0b9a\u0bc6\u0baf\u0bb2\u0bb4\u0bc8\u0baa\u0bcd\u0baa\u0bc1
 SEND_READ_RECEIPT_NEVER = \u0b92\u0bb0\u0bc1\u0baa\u0bcb\u0ba4\u0bc1\u0bae\u0bbf\u0bb2\u0bcd\u0bb2\u0bc8
@@ -1019,6 +1021,8 @@ MSG_zimbraPrefMailPollingInterval = \u0ba4\u0bc7\u0bb0\u0bcd\u0bb5\u0bc1\u0b9a\u
 LBL_asNewMailArrives = \u0baa\u0bc1\u0ba4\u0bbf\u0baf \u0b85\u0b9e\u0bcd\u0b9a\u0bb2\u0bcd \u0bb5\u0bb0\u0bc1\u0bae\u0bcd\u0baa\u0bcb\u0ba4\u0bc1
 LBL_manual = \u0b95\u0bc8\u0bae\u0bc1\u0bb1\u0bc8\u0baf\u0bbe\u0b95
 LBL_minute = \u0ba8\u0bbf\u0bae\u0bbf\u0b9f\u0b99\u0bcd\u0b95\u0bb3\u0bcd
+LBL_recallminute = {0} \u0ba8\u0bbf\u0bae\u0bbf\u0b9f\u0bae\u0bcd
+LBL_recallminutes = {0} \u0ba8\u0bbf\u0bae\u0bbf\u0b9f\u0b99\u0bcd\u0b95\u0bb3\u0bcd
 LBL_zimbraPrefMailPollingInterval = \u0ba4\u0bc7\u0bb0\u0bcd\u0bb5\u0bc1\u0b9a\u0bc6\u0baf\u0bcd\u0ba4\u0bb2\u0bcd \u0b87\u0b9f\u0bc8\u0bb5\u0bc6\u0bb3\u0bbf (\u0b87\u0bb5\u0bcd\u0bb5\u0bb3\u0bb5\u0bc1 \u0ba8\u0bc7\u0bb0\u0ba4\u0bcd\u0ba4\u0bbf\u0bb1\u0bcd\u0b95\u0bc1\u0baa\u0bcd \u0baa\u0bbf\u0bb1\u0b95\u0bc1 \u0baa\u0bc1\u0ba4\u0bbf\u0baf \u0b85\u0b9e\u0bcd\u0b9a\u0bb2\u0bcd \u0bb5\u0ba8\u0bcd\u0ba4\u0bbf\u0bb0\u0bc1\u0b95\u0bcd\u0b95\u0bbf\u0bb1\u0ba4\u0bbe \u0b8e\u0ba9\u0bcd\u0bb1\u0bc1 \u0baa\u0bbe\u0bb0\u0bcd\u0b95\u0bcd\u0b95 \u0bb5\u0bc7\u0ba3\u0bcd\u0b9f\u0bc1\u0bae\u0bcd):
 MSG_zimbraMailMinPollingInterval = \u0b95\u0bc1\u0bb1\u0bc8\u0ba8\u0bcd\u0ba4\u0baa\u0b9f\u0bcd\u0b9a \u0b85\u0b9e\u0bcd\u0b9a\u0bb2\u0bcd \u0ba4\u0bc7\u0bb0\u0bcd\u0bb5\u0bc1\u0b9a\u0bc6\u0baf\u0bcd\u0ba4\u0bb2\u0bcd \u0b87\u0b9f\u0bc8\u0bb5\u0bc6\u0bb3\u0bbf
 LBL_zimbraMailMinPollingInterval = \u0b95\u0bc1\u0bb1\u0bc8\u0ba8\u0bcd\u0ba4\u0baa\u0b9f\u0bcd\u0b9a \u0b85\u0b9e\u0bcd\u0b9a\u0bb2\u0bcd \u0ba4\u0bc7\u0bb0\u0bcd\u0bb5\u0bc1\u0b9a\u0bc6\u0baf\u0bcd\u0ba4\u0bb2\u0bcd \u0b87\u0b9f\u0bc8\u0bb5\u0bc6\u0bb3\u0bbf:
