--- a/WebRoot/messages/ZaMsg_vi.properties
+++ b/WebRoot/messages/ZaMsg_vi.properties
@@ -1009,6 +1009,8 @@ MSG_zimbraPrefReadReceiptsToAddress = \u0110\u1ecba ch\u1ec9 tr\u1ea3 l\u1eddi c
 LBL_zimbraPrefReadReceiptsToAddress = \u0110\u1ecba ch\u1ec9 tr\u1ea3 l\u1eddi cho c\u00e1c th\u00f4ng b\u00e1o x\u00e1c nh\u1eadn \u0111\u00e3 \u0111\u1ecdc: 
 LBL_zimbraPrefMailSendReadReceipts = G\u1eedi th\u01b0 \u0111\u00e3 \u0111\u1ecdc:
 LBL_zimbraFeatureReadReceiptsEnabled = B\u1eadt th\u00f4ng b\u00e1o x\u00e1c nh\u1eadn \u0111\u00e3 \u0111\u1ecdc
+LBL_zimbraFeatureEnableMailRecall = \u0074\u0068\u0075 \u0068\u1ed3\u0069 \u0074\u0068\u01b0
+LBL_zimbraFeatureMailRecallInterval = \u006b\u0068\u006f\u1ea3\u006e\u0067 \u0074\u0068\u1edd\u0069 \u0067\u0069\u0061\u006e \u0074\u0068\u0075 \u0068\u1ed3\u0069 \u0074\u0068\u01b0
 LBL_zimbraPrefMandatorySpellCheckEnabled = B\u1eadt ki\u1ec3m tra ch\u00ednh t\u1ea3 b\u1eaft bu\u1ed9c
 SEND_READ_RECEIPT_PROMPT = L\u1eddi nh\u1eafc
 SEND_READ_RECEIPT_NEVER = Kh\u00f4ng bao gi\u1edd
@@ -1019,6 +1021,8 @@ MSG_zimbraPrefMailPollingInterval = Kho\u1ea3ng th\u0103m d\u00f2 (th\u1eddi gia
 LBL_asNewMailArrives = Khi c\u00f3 th\u01b0 m\u1edbi
 LBL_manual = Th\u1ee7 c\u00f4ng
 LBL_minute = ph\u00fat
+LBL_recallminute = {0} ph\u00fat
+LBL_recallminutes = {0} ph\u00fat
 LBL_zimbraPrefMailPollingInterval = Kho\u1ea3ng th\u0103m d\u00f2 (th\u1eddi gian sau khi ki\u1ec3m tra th\u01b0 m\u1edbi)
 MSG_zimbraMailMinPollingInterval = Kho\u1ea3ng th\u0103m d\u00f2 th\u01b0 t\u1ed1i thi\u1ec3u
 LBL_zimbraMailMinPollingInterval = Kho\u1ea3ng th\u0103m d\u00f2 th\u01b0 t\u1ed1i thi\u1ec3u:
