ZCS-10704:Addressed review comments related to Username variable change and indentation

--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -1182,6 +1182,7 @@ NAD_Remove = Eliminar
 NAD_ForwardTo = Reenviar correo a
 NAD_COSName = Nombre de Clase de servicio
 NAD_PwdLocked = Evitar que el usuario cambie la contrase\u00f1a
+NAD_AllowUsernameInPassword = Permitir nombre de usuario en contraseña
 NAD_ResetToCOS = Restablecer al valor de Clase de servicio
 NAD_OverrideCOS = Invalidar Clase de servicio
 NAD_ResetToGlobal = Restablecer al valor general
@@ -1753,6 +1754,7 @@ ERROR_dlWithThisNameExists = \u00a1Ya existe una lista de correo, un recurso, al
 ERROR_MESSAGE_LIFETIME_BELOW_31 = Error! El Tiempo de retenci\u00f3n de los mensajes tiene que ser m\u00e1s de 30 d\u00edas!
 ERROR_PASSWORD_REQUIRED = \u00a1Debes especificar una contrase\u00f1a!
 ERROR_PASSWORD_MISMATCH = \u00a1Las contrase\u00f1as no coinciden!
+ERROR_PASSWORD_CONTAIN_USERNAME = La contrase\u00f1a no puede contener el nombre de usuario.
 ERROR_PASSWORD_TOOLONG = La contrase\u00f1a es demasiado larga.
 ERROR_PASSWORD_TOOSHORT = La contrase\u00f1a es demasiado corta.
 ERROR_PASSWORD_INVALID = La contrase\u00f1a no es v\u00e1lida
