ZCS-12417: added AjxStringFormat to receive the label numberical value as argument for the label in order to ease syntactical changes for various languages - replaced " with the unicode for hebrew language

--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -999,6 +999,8 @@ MSG_zimbraPrefMailPollingInterval = Abrufintervall (Zeit, nach der auf neue Mail
 LBL_asNewMailArrives = Beim Eingang neuer Mail
 LBL_manual = Manuell
 LBL_minute = Minuten
+LBL_recallminute = {0} Minuten
+LBL_recallminutes = {0} Minuten
 LBL_zimbraPrefMailPollingInterval = Abrufintervall (Zeit, nach der auf neue Mails gepr\u00fcft wird):
 MSG_zimbraMailMinPollingInterval = Mindestabrufintervall f\u00fcr Mails
 LBL_zimbraMailMinPollingInterval = Mindestabrufintervall f\u00fcr Mails:
