--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -1003,6 +1003,8 @@ MSG_zimbraPrefMailPollingInterval = Intervalo de consulta (tiempo de espera para
 LBL_asNewMailArrives = En cuanto llegue correo nuevo
 LBL_manual = Manualmente
 LBL_minute = minutos
+LBL_recallminute = {0} minutos
+LBL_recallminutes = {0} minutos
 LBL_zimbraPrefMailPollingInterval = Intervalo de comprobaci\u00f3n (per\u00edodo despu\u00e9s del cual comprobaremos si tienes mensajes nuevos):
 MSG_zimbraMailMinPollingInterval = Intervalo m\u00ednimo de consulta de correo
 LBL_zimbraMailMinPollingInterval = Intervalo de comprobaci\u00f3n m\u00ednimo:
