--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -1012,6 +1012,8 @@ MSG_zimbraPrefMailPollingInterval = Kontsulta-bitartea (posta berriz kontsultatz
 LBL_asNewMailArrives = Posta berria heltzen denean
 LBL_manual = Eskuz
 LBL_minute = minutu
+LBL_recallminute = {0} minutu
+LBL_recallminutes = {0} minutu
 LBL_zimbraPrefMailPollingInterval = Egiaztapen-bitartea (mezu berririk ba ote duzun egiaztatzeko itxarongo dugun denbora-tartea):
 MSG_zimbraMailMinPollingInterval = Posta-kontsultako gutxieneko bitartea
 LBL_zimbraMailMinPollingInterval = Gutxieneko egiaztapen-bitartea:
