--- a/WebRoot/messages/ZaMsg_fr.properties
+++ b/WebRoot/messages/ZaMsg_fr.properties
@@ -1006,6 +1006,8 @@ MSG_zimbraPrefMailPollingInterval = Intervalle d\u2019enqu\u00eate (dur\u00e9e a
 LBL_asNewMailArrives = D\u00e8s qu\u2019un nouveau mail arrive
 LBL_manual = Manuellement
 LBL_minute = minutes
+LBL_recallminute = {0} minute
+LBL_recallminutes = {0} minutes
 LBL_zimbraPrefMailPollingInterval = Intervalle de consultation (fr\u00e9quence avec laquelle le syst\u00e8me d\u00e9termine si de nouveaux mails sont arriv\u00e9s)\u00a0:
 MSG_zimbraMailMinPollingInterval = P\u00e9riode de consultation minimale
 LBL_zimbraMailMinPollingInterval = Intervalle de consultation minimum\u00a0:
