--- a/WebRoot/messages/ZaMsg_hi.properties
+++ b/WebRoot/messages/ZaMsg_hi.properties
@@ -990,6 +990,8 @@ MSG_zimbraPrefMailPollingInterval = \u092a\u094b\u0932\u093f\u0902\u0917 \u0905\
 LBL_asNewMailArrives = \u091c\u092c \u0928\u092f\u093e \u092e\u0947\u0932 \u0906\u0924\u093e \u0939\u0948
 LBL_manual = \u092e\u0948\u0928\u094d\u092f\u0941\u0905\u0932 \u0930\u0942\u092a \u0938\u0947
 LBL_minute = \u092e\u093f\u0928\u091f
+LBL_recallminute = {0} \u092e\u093f\u0928\u091f
+LBL_recallminutes = {0} \u092e\u093f\u0928\u091f
 LBL_zimbraPrefMailPollingInterval = \u092a\u094b\u0932\u093f\u0902\u0917 \u0905\u0902\u0924\u0930\u093e\u0932 (\u0928\u0908 \u092e\u0947\u0932 \u091c\u093e\u0901\u091a\u0928\u0947 \u0915\u0947 \u092c\u0940\u091a \u0915\u093e \u0905\u0902\u0924\u0930\u093e\u0932):
 MSG_zimbraMailMinPollingInterval = \u0928\u094d\u200d\u092f\u0942\u0928\u0924\u092e \u092e\u0947\u0932 \u092a\u094b\u0932\u093f\u0902\u0917 \u0905\u0902\u0924\u0930\u093e\u0932
 LBL_zimbraMailMinPollingInterval = \u0928\u094d\u200d\u092f\u0942\u0928\u0924\u092e \u092e\u0947\u0932 \u092a\u094b\u0932\u093f\u0902\u0917 \u0905\u0902\u0924\u0930\u093e\u0932:
