--- a/WebRoot/messages/ZaMsg_hr.properties
+++ b/WebRoot/messages/ZaMsg_hr.properties
@@ -1018,7 +1018,9 @@ LBL_zimbraPrefOutOfOfficeCacheDuration = Out of office cache lifetime:
 MSG_zimbraPrefMailPollingInterval = Polling interval (time after which to check for new mail)
 LBL_asNewMailArrives = As New Mail Arrives
 LBL_manual = Manually
-LBL_minute = minutes
+LBL_minute = minuta
+LBL_recallminute = {0} minuta
+LBL_recallminutes = {0} minuta
 LBL_zimbraPrefMailPollingInterval = Polling interval (time after which to check for new mail):
 MSG_zimbraMailMinPollingInterval = Minimum mail polling interval
 LBL_zimbraMailMinPollingInterval = Minimum mail polling interval:
