--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -1017,6 +1017,8 @@ MSG_zimbraPrefMailPollingInterval = Lek\u00e9rdez\u00e9si id\u0151k\u00f6z (enny
 LBL_asNewMailArrives = \u00daj lev\u00e9l \u00e9rkez\u00e9sekor
 LBL_manual = Manu\u00e1lisan
 LBL_minute = perc
+LBL_recallminute = {0} perc
+LBL_recallminutes = {0} perc
 LBL_zimbraPrefMailPollingInterval = Lek\u00e9rdez\u00e9si id\u0151k\u00f6z (ennyi id\u0151 eltelt\u00e9vel keressen \u00faj leveleket):
 MSG_zimbraMailMinPollingInterval = Minim\u00e1lis lev\u00e9llek\u00e9rdez\u00e9si id\u0151k\u00f6z
 LBL_zimbraMailMinPollingInterval = Minim\u00e1lis lev\u00e9llek\u00e9rdez\u00e9si id\u0151k\u00f6z:
