--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -1019,6 +1019,8 @@ MSG_zimbraPrefMailPollingInterval = Interval polling (waktu sebelum pemeriksaan 
 LBL_asNewMailArrives = Saat Email Baru Masuk
 LBL_manual = Secara manual
 LBL_minute = menit
+LBL_recallminute = {0} menit
+LBL_recallminutes = {0} menit
 LBL_zimbraPrefMailPollingInterval = Interval polling (waktu sebelum pemeriksaan email baru):
 MSG_zimbraMailMinPollingInterval = Interval polling email minimal
 LBL_zimbraMailMinPollingInterval = Interval polling email minimal:
