--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -1017,6 +1017,8 @@ MSG_zimbraPrefMailPollingInterval = Interval de interogare ciclic\u0103 (timpul 
 LBL_asNewMailArrives = La primirea unui mesaj
 LBL_manual = Manual
 LBL_minute = minute
+LBL_recallminute = {0} minute
+LBL_recallminutes = {0} minute
 LBL_zimbraPrefMailPollingInterval = Interval de interogare ciclic\u0103 (timpul dup\u0103 care se verific\u0103 dac\u0103 sunt mesaje noi):
 MSG_zimbraMailMinPollingInterval = Interval minim de interogare ciclic\u0103 a mesajelor
 LBL_zimbraMailMinPollingInterval = Interval minim de interogare ciclic\u0103 a mesajelor:
