--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -990,6 +990,8 @@ MSG_zimbraPrefMailPollingInterval = Polling-interval (tidsrum hvorefter der skal
 LBL_asNewMailArrives = Ved modtagelse af ny e-mail
 LBL_manual = Manuelt
 LBL_minute = minutter
+LBL_recallminute = {0} minutter
+LBL_recallminutes = {0} minutter
 LBL_zimbraPrefMailPollingInterval = Polling-interval (tidsrum hvorefter der skal kontrolleres for ny mail):
 MSG_zimbraMailMinPollingInterval = Minimum interval for mail-polling
 LBL_zimbraMailMinPollingInterval = Minimum interval for mail-polling:
