--- a/WebRoot/messages/ZaMsg_en_AU.properties
+++ b/WebRoot/messages/ZaMsg_en_AU.properties
@@ -1007,6 +1007,8 @@ MSG_zimbraPrefMailPollingInterval = Polling interval (time after which to check 
 LBL_asNewMailArrives = As New Mail Arrives
 LBL_manual = Manually
 LBL_minute = minutes
+LBL_recallminute = {0} minute
+LBL_recallminutes = {0} minutes
 LBL_zimbraPrefMailPollingInterval = Polling interval (time after which to check for new mail):
 MSG_zimbraMailMinPollingInterval = Minimum mail polling interval
 LBL_zimbraMailMinPollingInterval = Minimum mail polling interval:
