--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -1017,6 +1017,8 @@ MSG_zimbraPrefMailPollingInterval = Selang peninjauan (selang masa untuk menyema
 LBL_asNewMailArrives = Sebaik Mel Baharu Tiba
 LBL_manual = Secara manual
 LBL_minute = minit
+LBL_recallminute = {0} minit
+LBL_recallminutes = {0} minit
 LBL_zimbraPrefMailPollingInterval = Selang peninjauan (selang masa untuk menyemak mel baharu):
 MSG_zimbraMailMinPollingInterval = Selang peninjauan mel minimum
 LBL_zimbraMailMinPollingInterval = Selang peninjauan mel minimum:
