--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -989,6 +989,8 @@ MSG_zimbraPrefMailPollingInterval = Intervalo de verifica\u00e7\u00e3o (verifica
 LBL_asNewMailArrives = Ao que novos emails cheguem
 LBL_manual = Manualmente
 LBL_minute = minutos
+LBL_recallminute = {0} minutos
+LBL_recallminutes = {0} minutos
 LBL_zimbraPrefMailPollingInterval = Intervalo de verifica\u00e7\u00e3o (verificar novos e-mails ap\u00f3s um certo n\u00famero de minutos):
 MSG_zimbraMailMinPollingInterval = Intervalo m\u00ednimo de verifica\u00e7\u00e3o de e-mail
 LBL_zimbraMailMinPollingInterval = Intervalo m\u00ednimo de verifica\u00e7\u00e3o de e-mail:
