--- a/WebRoot/messages/ZaMsg_th.properties
+++ b/WebRoot/messages/ZaMsg_th.properties
@@ -1015,6 +1015,8 @@ MSG_zimbraPrefMailPollingInterval = \u0e0a\u0e48\u0e27\u0e07\u0e40\u0e27\u0e25\u
 LBL_asNewMailArrives = \u0e40\u0e1b\u0e47\u0e19\u0e08\u0e14\u0e2b\u0e21\u0e32\u0e22\u0e43\u0e2b\u0e21\u0e48\u0e17\u0e35\u0e48\u0e21\u0e32\u0e16\u0e36\u0e07
 LBL_manual = \u0e14\u0e49\u0e27\u0e22\u0e15\u0e19\u0e40\u0e2d\u0e07
 LBL_minute = \u0e19\u0e32\u0e17\u0e35
+LBL_recallminute = {0} \u0e19\u0e32\u0e17\u0e35
+LBL_recallminutes = {0} \u0e19\u0e32\u0e17\u0e35
 LBL_zimbraPrefMailPollingInterval = \u0e0a\u0e48\u0e27\u0e07\u0e40\u0e27\u0e25\u0e32\u0e01\u0e32\u0e23\u0e2b\u0e22\u0e31\u0e48\u0e07\u0e40\u0e2a\u0e35\u0e22\u0e07 (\u0e40\u0e27\u0e25\u0e32\u0e2b\u0e25\u0e31\u0e07\u0e01\u0e32\u0e23\u0e15\u0e23\u0e27\u0e08\u0e2a\u0e2d\u0e1a\u0e08\u0e14\u0e2b\u0e21\u0e32\u0e22\u0e43\u0e2b\u0e21\u0e48):
 MSG_zimbraMailMinPollingInterval = \u0e0a\u0e48\u0e27\u0e07\u0e40\u0e27\u0e25\u0e32\u0e01\u0e32\u0e23\u0e2b\u0e22\u0e31\u0e48\u0e07\u0e40\u0e2a\u0e35\u0e22\u0e07\u0e08\u0e14\u0e2b\u0e21\u0e32\u0e22\u0e15\u0e48\u0e33\u0e2a\u0e38\u0e14
 LBL_zimbraMailMinPollingInterval = \u0e0a\u0e48\u0e27\u0e07\u0e40\u0e27\u0e25\u0e32\u0e01\u0e32\u0e23\u0e2b\u0e22\u0e31\u0e48\u0e07\u0e40\u0e2a\u0e35\u0e22\u0e07\u0e08\u0e14\u0e2b\u0e21\u0e32\u0e22\u0e15\u0e48\u0e33\u0e2a\u0e38\u0e14:
